--- a/src/pages/supplier/index.html
+++ b/src/pages/supplier/index.html
@@ -34,6 +34,6 @@
     :overlay="true"
     :overlay-style="{'background-color':'rgba(1,7,14,.35)'}"
     class="popup-screen">
-   <screen></screen>
+   <screen @filters="getFilters"></screen>
   </van-popup>
 </div>
